--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "php": "^7.4",
+        "php": "^7.4|^8.0",
         "illuminate/database": "^8.0",
         "illuminate/support": "^8.0",
         "illuminate/view": "^8.0",
