--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 composer.lock
 vendor
+yarn.lock
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/tests/playwright/**/*-darwin.png
