Added test to check for load more reviews button

--- a/tests/playwright/.env.testing
+++ b/tests/playwright/.env.testing
@@ -28,6 +28,7 @@ SESSION_DRIVER=file
 PRODUCT_URL_REVIEWS=/stellar-solar-jacket.html
 PRODUCT_URL_WITHOUT_REVIEW=/olivia-1-4-zip-light-jacket.html
 PRODUCT_URL_WRITE_REVIEW=/typhon-performance-fleece-lined-jacket.html
+PRODUCT_URL_LOAD_MORE_REVIEWS=/josie-yoga-jacket.html
 
 CATEGORY_URL_SIMPLE=/gear/bags.html
 CATEGORY_URL_CONFIGURABLE=/women/tops-women.html
