--- a/tests/playwright/.env.testing
+++ b/tests/playwright/.env.testing
@@ -1,8 +1,6 @@
 APP_NAME="Rapidez reviews"
-APP_URL=http://rapidez.test
-MAGENTO_URL=http://magento.test
-#APP_URL=http://localhost:8000
-#MAGENTO_URL=http://localhost:1234
+APP_URL=http://localhost:8000
+MAGENTO_URL=http://localhost:1234
 CRYPT_KEY=5AM3SD5SkwT8iwIxL6L1q8XQhzK3wk51
 
 APP_ENV=testing
